# table-picker

./: .gitignore  README.md  TEST_VALIDATION_REPORT.md  compare_before_after.py  pyproject.toml  requirements.txt  setup.py  table_descriptions.json  test_centrality_boost.py  test_improvements.py  test_irrelevant_query.py
Table_Profile/: demo_analyzer.py  intend_analyser.py  main.py  profile.py  requirements.txt
Table_Profile/Dataset/: customer_analysis.xlsx  customer_dataset.csv  imdb_analysis.xlsx  organizations.xlsx  product_analysis.xlsx  student_analysis.xlsx  student_dataset_updated.csv  ttdsalesdata.csv
Table_Profile/Docs/: METADATA_COLLECTOR_DOCS.md  PROJECT_STRUCTURE.txt  README.md
Table_Profile/Legacy/: graph_builder.py  metadata_collector.py  metadata_collector_simple.py
Table_Profile/results/: IMDB_Movie_Data_graph.gexf  IMDB_Movie_Data_graph.gpickle  IMDB_Movie_Data_graph.graphml  IMDB_Movie_Data_graph.json  IMDB_Movie_Data_graph_summary.json  IMDB_Movie_Data_metadata.json  customer_dataset_metadata.json  ttdsalesdata_metadata.json
Table_Profile/table_profile_graph/: __init__.py  config.py  visualizer.py
Table_Profile/table_profile_graph/analyzer/: README.md  __init__.py  column_matcher.py  example.py  intent_extractor.py  query_parser.py
Table_Profile/table_profile_graph/graph/: __init__.py  builder.py  schema.py  serializer.py
Table_Profile/table_profile_graph/profiler/: __init__.py  hint_generator.py  metadata_collector.py  models.py  relationship_detector.py  stats_profiler.py  utils.py
aretai/: .env.example  .gitignore  __init__.py  base.py  client.py  error_formatter.py  exceptions.py  helpers.py  models.py  pyproject.toml  requirements.txt  setup.py  utils.py
aretai/adapters/: __init__.py  anthropic_adapter.py  grok_adapter.py  groq_adapter.py  openai_adapter.py
docs/: CENTRALITY_BRAINSTORM.md  CENTRALITY_IMPLEMENTATION.md  CENTRALITY_PHASE2_COMPLETE.md  DOMAIN_MISMATCH_IMPLEMENTATION.md  EMBEDDING_STRATEGY.md  EMBEDDING_STRATEGY_FREE.md  HOW_IT_WORKS.md  IRRELEVANT_QUERY_HANDLING.md  PHASE1_SUMMARY.md  PHASE2_QUICKSTART.md  RELATIONSHIP_MAP.md  SYNONYMS_GUIDE.md  TESTING_GUIDE.md  UNNECESSARY_FILES_REPORT.md  actual_vs_proposed_flow.md  education_schema_for_descriptions.md  embedding_failure_analysis.md  semantic_type_fix.md  signal_capping_implementation.md  signal_vector_implementation.md  smart_filtering_v2.md  smart_kg_querying_design.md  strict_filtering_implementation.md  synonym_fix_summary.md  test_analysis.md  test_questions.md  token_matching_evaluation.md  token_matching_implementation_results.md
education_kg_final/: combined_graph.json.json  embeddings.pkl
education_kg_final/courses/: courses_graph.json.json
education_kg_final/faculty_info/: faculty_info_graph.json.json
education_kg_final/feedue/: feedue_graph.json.json
education_kg_final/grades/: grades_graph.json.json
education_kg_final/hostel/: hostel_graph.json.json
education_kg_final/parent_info/: parent_info_graph.json.json
education_kg_final/registration/: registration_graph.json.json
education_kg_final/students_info/: students_info_graph.json.json
helpers/: build_education_kg_final.py  build_embeddings.py  column_synonyms.csv  extract_education_metadata.py  fixed_relationship_detector.py  inspect_kg_relationships.py  interactive_table_picker.py  test_table_picker.py  test_validation_automation.py
kg_enhanced_table_picker/models/: __init__.py  kg_metadata.py  table_score.py  table_selection.py
kg_enhanced_table_picker/repository/: __init__.py  kg_repository.py  synonym_loader.py
kg_enhanced_table_picker/services/: __init__.py  embedding_service.py  kg_service.py  scoring_service.py
