[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "table-picker"
version = "0.1.0"
description = "Intelligent table selection and relationship detection for multi-table NL2SQL queries"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "NORA Team"}
]
keywords = ["table-selection", "nl2sql", "multi-table", "joins", "duckdb", "relationship-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
rag = [
    "chromadb>=0.4.0",  # Optional: for vector-based RAG table search
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/nora/table-picker"
Repository = "https://github.com/nora/table-picker"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=table_picker --cov-report=term-missing"
