[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aretai"
version = "1.0.0"
description = "Unified LLM Client for Areta360 - Single API for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Proprietary - Areta360"}
authors = [
    {name = "Areta360", email = "noreply@areta360.com"}
]
keywords = [
    "llm",
    "ai",
    "anthropic",
    "openai",
    "groq",
    "grok",
    "claude",
    "gpt",
    "unified-api",
    "llm-client"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "groq>=0.4.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Ashwin-areta360/aretai-llmhub"
Repository = "https://github.com/Ashwin-areta360/aretai-llmhub"
Issues = "https://github.com/Ashwin-areta360/aretai-llmhub/issues"

[tool.setuptools]
package-dir = {"" = "."}  # Package root is in current directory
packages = ["aretai", "aretai.adapters"]

[tool.setuptools.package-data]
aretai = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
